--- a/String_Operation(Assignment).ipynb
+++ b/String_Operation(Assignment).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "String Operation(Assignment).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNGCIFNdAh4Fjb0qL5uQPuV",
+      "authorship_tag": "ABX9TyNyOUYqC8Sr+3vTvC5/4ZH2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -483,6 +483,46 @@
       "cell_type": "code",
       "metadata": {
         "id": "zV0meh_167lY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#11. Find the places when 'chuk' occurs in the string\n",
+        "#'How much wood a chuckwood chuk if a woodchuck could chuck wood?' "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vyyNr5woFLIc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "3db8a163-adac-4da2-bffa-9a0b92b4da31"
+      },
+      "source": [
+        "str='How much wood a chuckwood chuk if a woodchuck could chuck wood?'\n",
+        "print(str.count('chuck'))"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zXxOKXRLFViW",
         "colab_type": "code",
         "colab": {}
       },
